Modifications in userController.js and userRequester.js

--- a/public/index.html
+++ b/public/index.html
@@ -78,8 +78,9 @@
     </footer>
   <script src="libs/systemjs/dist/system.js"></script>
   <script src="libs/handlebars/dist/handlebars.js"></script> <!-- FIX ME -->
-  <script src="libs/toastr/build/toastr.min.js"></script> <!--FIX ME --> 
+  <script src="libs/toastr/build/toastr.min.js"></script> <!--FIX ME -->
+  <script src="libs/crypto-js/crypto-js.js"></script>
   <script src="scripts/system-config.js"></script>
-  
+
 </body>
 </html>
