Add toastr, msg errors, hidden btn

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <a id="home-btn"  href="#/home" >Home</a>
     <a id="contact-btn" href="#/contact">Contact</a>
     <a id="login"  href="#/login">Login</a>
-    <a id="logout" href="#/logout">Log out</a>
+    <a id="logout" clas = "hidden" href="#/logout">Log out</a>
     <a id="register" href="#/register">Register</a>
   </header>
   
