Add team and about

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
 <body>
   <header>
     <a id="home-btn"  href="#/home" >Home</a>
+    <a id="team-btn" href="#/team">Team</a>
+    <a id="about-btn" href="#/about">About</a>
     <a id="contact-btn" href="#/contact">Contact</a>
     <a id="login"  href="#/login">Login</a>
     <a id="logout" clas = "hidden" href="#/logout">Log out</a>
