Add category menu

--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
               <a id="login" href="#/login">Вход</a>
             </li>
             <li class="page-scroll">
-              <a id="logout" clas="hidden" href="#/logout">Изход</a>
+              <a id="logout" class="hidden" href="#/logout">Изход</a>
             </li>
             <li class="page-scroll">
               <a id="register" href="#/register">Регистрация</a>
