added slider in home template

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="libs/toastr/build/toastr.min.css" />
   <link href="../libs/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
   <link href="css/freelancer.css" rel="stylesheet">
-  <link href="../libs/bootstrap/vendor/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css">
+  <link href="./" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
   <!-- Add css file for bootsrap lancer 
@@ -42,13 +42,7 @@
               <a id="home-btn" href="#/home">Начало</a>
             </li>
             <li class="page-scroll">
-              <a id="about-btn" href="#/about">За нас</a>
-            </li>
-            <li class="page-scroll">
               <a id="about-btn" href="#/sightsAll">Обекти</a>
-            </li>
-            <li class="page-scroll">
-              <a id="team-btn" href="#/team">Екипът</a>
             </li>
             <li class="page-scroll">
               <a id="contact-btn" href="#/contact">Контакти</a>
@@ -75,15 +69,13 @@
           <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
           <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
           <a href="https://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a>
-          <a href="https://github.com/ilievv/Nightwing" target="_blank"><i class="fa fa-github"></i></a>
+          <a href="https://github.com/" target="_blank"><i class="fa fa-github"></i></a>
         </div>
 
         <div class="footer-left">
-          <p class="footer-links">
-            <a href="#/">Начало</a> ·
+          <p class="footer-links"> .
             <a href="#/about">За нас</a> ·
-            <a href="#/sightsAll">Обекти</a> ·
-            <a href="#/team">Екипът</a>
+            <a href="#/team">Екипът</a> .
             <a href="#/contact">Контакти</a>
           </p>
           <p>Goodsights &copy; 2017</p>
@@ -98,6 +90,7 @@
       <!--FIX ME -->
       <script src="libs/crypto-js/crypto-js.js"></script>
       <script src="scripts/system-config.js"></script>
+      
 
 </body>
 
