--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <title>Goodsights</title>
 
   <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="css/font-awesome.css" />
   <link rel="stylesheet" href="libs/toastr/build/toastr.min.css" />
   <link href="../libs/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
   <link href="css/freelancer.css" rel="stylesheet">
@@ -22,7 +23,7 @@
 
 <body id="page-top" class="index">
   <div id="skipnav"><a href="#maincontent">Skip to main content</a></div>
-    <!-- Navigation -->
+  <!-- Navigation -->
   <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
@@ -30,30 +31,27 @@
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Меню <i class="fa fa-bars"></i>
                 </button>
-        <a class="navbar-brand" href="#page-top"><img src="./images/logo-2.png" alt="Goodsights"></a>
+        <a id="logo" class="navbar-brand" href="#/home"><img src="./images/logo-2.png" alt="Goodsights"></a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <header>
           <ul class="nav navbar-nav navbar-right">
-            <li class="hidden">
-              <a href="#page-top"></a>
-            </li>
-            <li class="page-scroll">
+            <li>
               <a id="home-btn" href="#/home">Начало</a>
             </li>
-            <li class="page-scroll">
+            <li>
               <a id="about-btn" href="#/sightsAll">Обекти</a>
             </li>
-            <li class="page-scroll">
+            <li>
               <a id="contact-btn" href="#/contact">Контакти</a>
             </li>
-            <li class="page-scroll">
+            <li>
               <a id="login" href="#/login">Вход</a>
             </li>
-            <li class="page-scroll">
+            <li>
               <a id="logout" class="hidden" href="#/logout">Изход</a>
             </li>
-            <li class="page-scroll">
+            <li>
               <a id="register" href="#/register">Регистрация</a>
             </li>
           </ul>
@@ -62,14 +60,29 @@
 
       <main id="app-container" class="container" tabindex="-1"></main>
 
-       <!-- Footer FIX IT WITH CSS FROM freelancer!!! -->
+      <!-- Footer FIX IT WITH CSS FROM freelancer!!! -->
       <footer class="footer-distributed">
 
-        <div class="footer-right">
-          <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
-          <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
-          <a href="https://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a>
-          <a href="https://github.com/" target="_blank"><i class="fa fa-github"></i></a>
+        <div class="footer-col col-md-4">
+          <div class="footer-right">
+            <ul class="list-inline">
+              <li>
+                <a href="#" class="btn-social btn-outline"><span class="sr-only">Facebook</span><i class="fa fa-fw fa-facebook"></i></a>
+              </li>
+              <li>
+                <a href="#" class="btn-social btn-outline"><span class="sr-only">Google Plus</span><i class="fa fa-fw fa-google-plus"></i></a>
+              </li>
+              <li>
+                <a href="#" class="btn-social btn-outline"><span class="sr-only">Twitter</span><i class="fa fa-fw fa-twitter"></i></a>
+              </li>
+              <li>
+                <a href="#" class="btn-social btn-outline"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-linkedin"></i></a>
+              </li>
+              <li>
+                <a href="#" class="btn-social btn-outline"><span class="sr-only">Dribble</span><i class="fa fa-fw fa-dribbble"></i></a>
+              </li>
+            </ul>
+          </div>
         </div>
 
         <div class="footer-left">
@@ -90,7 +103,7 @@
       <!--FIX ME -->
       <script src="libs/crypto-js/crypto-js.js"></script>
       <script src="scripts/system-config.js"></script>
-      
+
 
 </body>
 
