share + templates bug fixes

--- a/public/index.html
+++ b/public/index.html
@@ -63,13 +63,13 @@
       <div class="footer-right">
         <ul class="list-inline">
           <li>
-            <a href="https://www.facebook.com" class="btn-social btn-outline"><span class="sr-only">Facebook</span><i class="fa fa-fw fa-facebook"></i></a>
+            <a href="https://www.facebook.com/sharer.php?s=100&p[url]=https://cdn.rawgit.com/VampireChicks/Goodsights/c56ca3dc/public/index.html" class="btn-social btn-outline"><span class="sr-only">Facebook</span><i class="fa fa-fw fa-facebook"></i></a>
           </li>
           <li>
-            <a href="https://plus.google.com" class="btn-social btn-outline"><span class="sr-only">Google Plus</span><i class="fa fa-fw fa-google-plus"></i></a>
+            <a href="https://plus.google.com/share?url=https://cdn.rawgit.com/VampireChicks/Goodsights/c56ca3dc/public/index.html" class="btn-social btn-outline"><span class="sr-only">Google Plus</span><i class="fa fa-fw fa-google-plus"></i></a>
           </li>
           <li>
-            <a href="https://twitter.com" class="btn-social btn-outline"><span class="sr-only">Twitter</span><i class="fa fa-fw fa-twitter"></i></a>
+            <a href="https://www.twitter.com/share?url=https://cdn.rawgit.com/VampireChicks/Goodsights/c56ca3dc/public/index.html" class="btn-social btn-outline"><span class="sr-only">Twitter</span><i class="fa fa-fw fa-twitter"></i></a>
           </li>
           <li>
             <a href="https://linkedin.com" class="btn-social btn-outline"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-linkedin"></i></a>
