--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,6 @@
   <link href="./" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-  <!-- Add css file for bootsrap lancer 
-  <link href="libs/bootstrap/css/freelancer.css" rel="stylesheet"> 
-  <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css" />
-  -->
 
 </head>
 
@@ -58,18 +54,18 @@
 
   <main id="app-container" class="container" tabindex="-1"></main>
 
-  <!-- Footer FIX IT WITH CSS FROM freelancer!!! -->
+  <!-- Footer  -->
   <footer class="footer-distributed">   
       <div class="footer-right">
         <ul class="list-inline">
           <li>
-            <a href="https://www.facebook.com/sharer.php?s=100&p[url]=https://cdn.rawgit.com/VampireChicks/Goodsights/c56ca3dc/public/index.html" class="btn-social btn-outline"><span class="sr-only">Facebook</span><i class="fa fa-fw fa-facebook"></i></a>
+            <a href="https://www.facebook.com" class="btn-social btn-outline"><span class="sr-only">Facebook</span><i class="fa fa-fw fa-facebook"></i></a>
           </li>
           <li>
-            <a href="https://plus.google.com/share?url=https://cdn.rawgit.com/VampireChicks/Goodsights/c56ca3dc/public/index.html" class="btn-social btn-outline"><span class="sr-only">Google Plus</span><i class="fa fa-fw fa-google-plus"></i></a>
+            <a href="https://plus.google.com" class="btn-social btn-outline"><span class="sr-only">Google Plus</span><i class="fa fa-fw fa-google-plus"></i></a>
           </li>
           <li>
-            <a href="https://www.twitter.com/share?url=https://cdn.rawgit.com/VampireChicks/Goodsights/c56ca3dc/public/index.html" class="btn-social btn-outline"><span class="sr-only">Twitter</span><i class="fa fa-fw fa-twitter"></i></a>
+            <a href="https://twitter.com" class="btn-social btn-outline"><span class="sr-only">Twitter</span><i class="fa fa-fw fa-twitter"></i></a>
           </li>
           <li>
             <a href="https://linkedin.com" class="btn-social btn-outline"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-linkedin"></i></a>
@@ -90,9 +86,7 @@
 
   <script src="libs/systemjs/dist/system.js"></script>
   <script src="libs/handlebars/dist/handlebars.js"></script>
-  <!-- FIX ME -->
   <script src="libs/toastr/build/toastr.min.js"></script>
-  <!--FIX ME -->
   <script src="libs/crypto-js/crypto-js.js"></script>
   <script src="scripts/system-config.js"></script>
 
